--- a/layout/button-panel-html.xml
+++ b/layout/button-panel-html.xml
@@ -1,2 +1,2 @@
 <a class="btn btn-default ${['disabled',''][enabled]}" href="${action}"
-   tal:attributes="data-confirm confirm; data-prompt prompt"><span class="fa fa-${icon}"></span>${label}</a>
+   tal:attributes="data-confirm confirm; data-prompt prompt"><span class="fa fa-${icon}"></span>&nbsp;${label}</a>
